--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^2.3.2",
     "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.1.1",
-    "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11"
